# FBGEMM

fbgemm_gpu/experimental/gen_ai/src/quantize/cutlass_extensions/f8f8bf16_rowwise/: f8f8bf16_rowwise_manifest.cuh
fbgemm_gpu/src/dram_kv_embedding_cache/: SynchronizedShardedMap.h  fixed_block_pool.h
fbgemm_gpu/test/dram_kv_embedding_cache/: CMakeLists.txt  fixed_block_pool_saver_test.cpp  sharded_map_test.cpp
